# wasm-testsuite

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: test.yaml
data/proposals/mutable-global/: globals.wast
data/wasm-v1/: binary.wast  data.wast  elem.wast  func.wast  imports.wast  linking.wast  type.wast  unreached-invalid.wast
scripts/: Cargo.toml  update.rs
src/: lib.rs  x.rs
src/data/: mod.rs
