[workspace]
resolver="3"
members=[".", "scripts"]
default-members=["scripts", "."]

[package]
name="wasm-testsuite"
version="0.5.12"
description="Generic test harness for WebAssembly Runtimes"
authors=["Henry Gressmann <mail@henrygressmann.de>"]
repository="https://github.com/explodingcamera/tinywasm"
license="Apache-2.0"
readme="README.md"
edition="2024"
include=["src/**/*", "data/**/*", "Cargo.toml"]
rust-version="1.88"

[dependencies]
include_dir="0.7.4"
wast={version="239", optional=true}

[dev-dependencies]
eyre="0.6"

[features]
default=["wast"]

# Enable helpers for the `wast` crate. Can have breaking changes in patch releases.
wast=["dep:wast"]
